--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <p id="tempdetail" class="temp">-</p>
                 <p id="temp" class="temp">Temp: °c</p>
                 <p id="feelslike" class="temp">Feels Like: °c</p>
-                <p id="mintemp" class="temp">Temp: 61.07°</p>
+                <p id="mintemp" class="temp">Humidity: %</p>
             </div>
         </div>
     </div>
