--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
                 <p id="tempdetail" class="temp">-</p>
                 <p id="temp" class="temp">Temp: °c</p>
                 <p id="feelslike" class="temp">Feels Like: °c</p>
-                <p id="mintemp" class="temp">Humidity: %</p>
+                <p id="maxtemp" class="temp">max-temp: °c</p>
+                <p id="mintemp" class="temp">min-temp: °c</p>
+                <p id="humidity" class="temp">Humidity: %</p>
             </div>
         </div>
     </div>
